syntax = "proto3";

package api.rebac.v1;

import "google/api/annotations.proto";

option go_package = "ciam-rebac/api/rebac/v1;v1";
option java_multiple_files = true;
option java_package = "api.rebac.v1";

service Relationships {
	rpc CreateRelationships (CreateRelationshipsRequest) returns (CreateRelationshipsResponse) {
		option (google.api.http) = {
			post: "/authz/v1/relationships"
			body: "*"
		};
	};
	rpc ReadRelationships (ReadRelationshipsRequest) returns (ReadRelationshipsResponse) {
		option (google.api.http) = {
			get: "/authz/v1/relationships"
		};
	};
	rpc DeleteRelationships (DeleteRelationshipsRequest) returns (DeleteRelationshipsResponse) {
		option (google.api.http) = {
			delete: "/authz/v1/relationships"
		};
	};
}

message CreateRelationshipsRequest {
	bool touch = 1;
	repeated Relationship relationships = 2;
}
message CreateRelationshipsResponse {}

message ReadRelationshipsRequest {
	RelationshipFilter filter = 1;
}
message ReadRelationshipsResponse {
	repeated Relationship relationships = 1;
}

message DeleteRelationshipsRequest {
	RelationshipFilter filter = 1;
}
message DeleteRelationshipsResponse {}

message RelationshipFilter {
	string object_type = 1;
	string object_id = 2;
	string relation = 3;
	SubjectFilter subject_filter = 4;
}

message SubjectFilter {
	string relation = 1;
	string subject_id = 2;
	string subject_type = 3;
}

message Relationship {
	ObjectReference object = 1;
	string relation = 2;
	SubjectReference subject = 3;
}

message SubjectReference {
	string relation = 1;
	ObjectReference object = 2;
}

message ObjectReference {
	string type = 1;
	string id = 2;
}